--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,41 +1,31 @@
 [package]
+# This is NOT an official Rust project but since most code will come from
+# the rust-lang/rust repo it makes sense to use this author.
 authors = ["The Rust Project Developers"]
 name = "std"
-version = "0.0.0"
-build = "build.rs"
-
-[lib]
-name = "std"
-path = "lib.rs"
-crate-type = ["dylib", "rlib"]
+version = "0.1.0"
 
 [dependencies]
-alloc = { path = "../liballoc" }
-alloc_jemalloc = { path = "../liballoc_jemalloc", optional = true }
-alloc_system = { path = "../liballoc_system" }
-panic_unwind = { path = "../libpanic_unwind", optional = true }
-panic_abort = { path = "../libpanic_abort" }
-collections = { path = "../libcollections" }
-core = { path = "../libcore" }
-libc = { path = "../rustc/libc_shim" }
-rand = { path = "../librand" }
-compiler_builtins = { path = "../libcompiler_builtins" }
-std_unicode = { path = "../libstd_unicode" }
-unwind = { path = "../libunwind" }
+sc = "0.2"
 
-[target.x86_64-unknown-linux-gnu.dependencies]
-rustc_asan = { path = "../librustc_asan" }
-rustc_lsan = { path = "../librustc_lsan" }
-rustc_msan = { path = "../librustc_msan" }
-rustc_tsan = { path = "../librustc_tsan" }
+[dependencies.ralloc]
+default-features = false
+features = ["allocator"]
+git = "https://github.com/redox-os/ralloc"
+optional = true
 
-[build-dependencies]
-build_helper = { path = "../build_helper" }
-gcc = "0.3.27"
+[dependencies.naive_ralloc]
+optional = true
+path = "naive_ralloc"
+
+[dependencies.compiler_builtins]
+default-features = false
+features = ["mem"]
+git = "https://github.com/rust-lang-nursery/compiler-builtins"
 
 [features]
-backtrace = []
-debug-jemalloc = ["alloc_jemalloc/debug"]
-jemalloc = ["alloc_jemalloc"]
-force_alloc_system = []
-panic-unwind = ["panic_unwind"]
+default = ["compiler-builtins", "ralloc"]
+compiler-builtins = ["compiler_builtins/compiler-builtins"]
+
+[profile.release]
+lto = true
