Move newely added libc replacement to its own crate for easier sharing between modules

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ version = "0.2"
 default-features = false
 path = "libc"
 
+[dependencies.libc_shim]
+path = "libc_shim"
+
 [dependencies.ralloc]
 default-features = false
 features = ["allocator"]
