Use naive_ralloc as ralloc is broken with missing __rust_allocate_zeroed symbol

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ optional = true
 path = "naive_ralloc"
 
 [features]
-default = ["ralloc"]
+default = ["naive_ralloc"]
 
 [profile.release]
 lto = true
